--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
+<p>This is a new feature</p>
+<p>This to check how branches work in git</p>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, ullam vel! Consectetur officia eligendi consequuntur natus doloribus, nulla pariatur dicta assumenda perferendis temporibus voluptates nam iure sit blanditiis, neque nobis.</p>
